ProjetCompil/Verif/Test/fail/typeNonCompatible12.cas
program
	A : 1..10;
	B : 1..15;
	C : real;
begin
	A := B mod C;
end.
	
